# mnemnk-chatvrm

./: README.md  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  rest.rs
src/components/: assistantText.tsx  chatLog.tsx  introduction.tsx  menu.tsx  messageInput.tsx  settings.tsx
src/features/chat/: openAiChat.ts
src/features/constants/: koeiroParam.ts  mnemnk.ts  systemPromptConstants.ts
src/features/koeiromap/: koeiromap.ts
src/features/lipSync/: lipSync.ts
src/features/messages/: messages.ts  speakCharacter.ts  synthesizeVoice.ts
src/features/vrmViewer/: model.ts  viewer.ts
src/lib/VRMAnimation/: VRMAnimation.ts
src/pages/: _document.tsx  index.tsx
