[package]
name = "mnemnk-chatvrm"
version = "0.1.0"
description = "Mnemnk ChatVRM"
authors = ["Akira Ishino"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mnemnk_chatvrm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tokio = { version = "1.45", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
warp = "0.3.7"
